# tree-sitter-wgsl-bevy

./: .gitignore  .npmignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  update-wgsl-parser.yml  update.yml
bindings/c/: tree-sitter-wgsl-bevy.pc.in  tree-sitter-wgsl_bevy.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_wgsl_bevy/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWGSLBevy/: wgsl_bevy.h
bindings/swift/TreeSitterWGSLBevyTests/: TreeSitterWGSLBevyTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt  function_overrides.txt
